# GestureIMU

./: .gitignore  README.md
Host/: README.md  clear.sh  data_parser.py  parser.py  record_gesture.sh
ModuleIMU/: LICENSE  README.md
ModuleIMU/components/ble/: CMakeLists.txt  esp_hid_device.c  esp_hid_device.h
ModuleIMU/components/mpu/: CMakeLists.txt  Kconfig  i2cdev.c  mpu.c
ModuleIMU/main/: CMakeLists.txt  main.c  switch_pindefs.h  switches.c  switches.h
components/ble/: esp_hid_device.c  esp_hid_gap.c
components/mpu/: i2cdev.c  i2cdev.h  mpu.h  pindefs.h
main/: main.c
